<?xml version="1.0"?>
<package format="3">
  <name>map_manager</name>
  <version>1.0.0</version>
  <description>The map manager package containing occupancy, ESDF, and dynamic map.</description>
  <maintainer email="chris.suzuki@xtechlab.ykkap.com">Chris Suzuki</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>onboard_detector</depend>
  <depend>Eigen3</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>rosidl_default_generators</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

